--- a/marketing-analysis/model_building.ipynb
+++ b/marketing-analysis/model_building.ipynb
@@ -2,16 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.feature_selection import SelectFromModel\n",
+    "from sklearn.feature_selection import SelectFromModel, SelectKBest, chi2\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.linear_model import Lasso, LogisticRegressionCV\n"
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.linear_model import LassoCV, LogisticRegressionCV\n",
+    "from sklearn.dummy import DummyClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from "
    ]
   },
   {
@@ -86,7 +91,7 @@
        "      <td>Single</td>\n",
        "      <td>Graduation</td>\n",
        "      <td>False</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -110,7 +115,7 @@
        "      <td>Single</td>\n",
        "      <td>Graduation</td>\n",
        "      <td>False</td>\n",
-       "      <td>5</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -158,7 +163,7 @@
        "      <td>Together</td>\n",
        "      <td>Graduation</td>\n",
        "      <td>True</td>\n",
-       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -182,7 +187,7 @@
        "      <td>Maried</td>\n",
        "      <td>PhD</td>\n",
        "      <td>True</td>\n",
-       "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -212,11 +217,11 @@
        "4           True              392                   0             1   \n",
        "\n",
        "   TotalMntSpent  marital_status   education  has_a_partner  cluster  \n",
-       "0           3058          Single  Graduation          False        1  \n",
-       "1             42          Single  Graduation          False        5  \n",
+       "0           3058          Single  Graduation          False        2  \n",
+       "1             42          Single  Graduation          False        1  \n",
        "2           1468        Together  Graduation           True        2  \n",
-       "3             96        Together  Graduation           True        3  \n",
-       "4            814          Maried         PhD           True        0  \n",
+       "3             96        Together  Graduation           True        1  \n",
+       "4            814          Maried         PhD           True        3  \n",
        "\n",
        "[5 rows x 42 columns]"
       ]
@@ -228,12 +233,12 @@
    ],
    "source": [
     "data = pd.read_pickle(\"data_with_clusters.pkl\")\n",
-    "data.head(5)\n"
+    "data.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,124 +248,154 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 31,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Rafael\\Documents\\Projects\\animal-clf-env\\Lib\\site-packages\\sklearn\\feature_selection\\_base.py:121: UserWarning: No features were selected: either the data is too noisy or the selection test too strict.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1347</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1348</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1349</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1350</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1351</th>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1352 rows × 0 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, ...]\n",
-       "\n",
-       "[1352 rows x 0 columns]"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "std_scaler = StandardScaler()\n",
-    "X_train_scaled = std_scaler.fit_transform(X_train.select_dtypes(\"number\"))\n",
-    "model = LogisticRegressionCV(cv=5)\n",
-    "X_new = SelectFromModel(Lasso(), max_features=10).set_output(transform=\"pandas\")\n",
-    "X_new.fit_transform(X_train_scaled, y_train)\n"
+    "# Dummy Classifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[  69.,  364.,  425., 2317., 2094.],\n",
-       "       [  29.,   65.,   74., 2634.,  466.],\n",
-       "       [  71.,  160.,  369., 2765., 1430.],\n",
-       "       ...,\n",
-       "       [  23.,  102.,   49., 2270.,  374.],\n",
-       "       [  53.,  368.,  639., 2359., 2190.],\n",
-       "       [  94.,   87.,   34., 2291.,  300.]])"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       False       0.83      1.00      0.91       553\n",
+      "        True       0.00      0.00      0.00       113\n",
+      "\n",
+      "    accuracy                           0.83       666\n",
+      "   macro avg       0.42      0.50      0.45       666\n",
+      "weighted avg       0.69      0.83      0.75       666\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Rafael\\Documents\\Projects\\animal-clf-env\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\Rafael\\Documents\\Projects\\animal-clf-env\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\Rafael\\Documents\\Projects\\animal-clf-env\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "dummy_clf = DummyClassifier().fit(X_train, y_train)\n",
+    "print(classification_report(y_test, dummy_clf.predict(X_test)))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr_pipe = Pipeline(\n",
+    "    steps=[\n",
+    "        (\"scaler\", StandardScaler()),\n",
+    "        (\n",
+    "            \"ftr_sel\",\n",
+    "            SelectFromModel(\n",
+    "                RandomForestClassifier(), threshold=-np.inf, max_features=10\n",
+    "            ),\n",
+    "        ),\n",
+    "        (\"model\", RandomForestClassifier()),\n",
+    "    ]\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       False       0.89      0.97      0.93       553\n",
+      "        True       0.74      0.40      0.52       113\n",
+      "\n",
+      "    accuracy                           0.87       666\n",
+      "   macro avg       0.81      0.68      0.72       666\n",
+      "weighted avg       0.86      0.87      0.86       666\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "lr_pipe.fit(X_train.select_dtypes(\"number\"), y_train)\n",
+    "print(classification_report(y_test, lr_pipe.predict(X_test.select_dtypes(\"number\"))))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# RandomForest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf_pipe = Pipeline(\n",
+    "    steps=[\n",
+    "        (\n",
+    "            \"ftr_sel\",\n",
+    "            SelectFromModel(\n",
+    "                RandomForestClassifier(), threshold=-np.inf, max_features=10\n",
+    "            ),\n",
+    "        ),\n",
+    "        (\"model\", RandomForestClassifier()),\n",
+    "    ]\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       False       0.87      0.96      0.91       553\n",
+      "        True       0.59      0.30      0.40       113\n",
+      "\n",
+      "    accuracy                           0.85       666\n",
+      "   macro avg       0.73      0.63      0.65       666\n",
+      "weighted avg       0.82      0.85      0.82       666\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "rf_pipe.fit(X_train.select_dtypes(\"number\"), y_train)\n",
+    "print(classification_report(y_test, rf_pipe.predict(X_test.select_dtypes(\"number\"))))\n"
+   ]
   }
  ],
  "metadata": {
