--- a/marketing-analysis/client_segmentation.ipynb
+++ b/marketing-analysis/client_segmentation.ipynb
@@ -584,7 +584,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Customers belonging to cluster 3 are more prone to accept the campaigns"
+    "Customers belonging to clusters 1 and 3 are more prone to accept the campaigns"
    ]
   },
   {
