--- a/analise-qualitativa/eda.ipynb
+++ b/analise-qualitativa/eda.ipynb
@@ -2,18 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "\n",
+    "from scipy.stats import chi2_contingency\n",
+    "\n",
+    "pd.set_option('display.float_format', lambda x: '%.5f' % x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +108,7 @@
        "4  T126      ALG-I      1P     1     H     H"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +262,7 @@
        "[457 rows x 5 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +383,7 @@
        "4  T126      ALG-I      1P     1     H     H       1             2     6"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +415,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,14 +511,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Rafael\\AppData\\Local\\Temp\\ipykernel_8060\\2260035531.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\Rafael\\AppData\\Local\\Temp\\ipykernel_13972\\2260035531.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -530,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +749,7 @@
        "[457 rows x 10 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -877,7 +881,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,6 +898,124 @@
     "- As turmas do 2º Turno da Manhã expressaram preferência pela modalidade Presencial.\n",
     "- A turma T146 teve empate entre votos a favor da modalidade Presencial e Híbrida\n",
     "- A turma T163 se manisfestou a favor da modalidade Híbrida."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Testando se a escolha de cada grupo é estatisticamente significante"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>chi_value</th>\n",
+       "      <th>pvalue</th>\n",
+       "      <th>dof</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>TURMA</th>\n",
+       "      <td>67.48916</td>\n",
+       "      <td>0.00003</td>\n",
+       "      <td>27.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DISCIPLINA</th>\n",
+       "      <td>33.28973</td>\n",
+       "      <td>0.00012</td>\n",
+       "      <td>9.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PERÍODO</th>\n",
+       "      <td>33.28973</td>\n",
+       "      <td>0.00012</td>\n",
+       "      <td>9.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>turno</th>\n",
+       "      <td>42.96724</td>\n",
+       "      <td>0.00016</td>\n",
+       "      <td>15.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SEXO</th>\n",
+       "      <td>19.83062</td>\n",
+       "      <td>0.00018</td>\n",
+       "      <td>3.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>turno_do_dia</th>\n",
+       "      <td>13.68258</td>\n",
+       "      <td>0.00337</td>\n",
+       "      <td>3.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>dia_da_semana</th>\n",
+       "      <td>16.33029</td>\n",
+       "      <td>0.06030</td>\n",
+       "      <td>9.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unidade</th>\n",
+       "      <td>4.56085</td>\n",
+       "      <td>0.20693</td>\n",
+       "      <td>3.00000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               chi_value  pvalue      dof\n",
+       "TURMA           67.48916 0.00003 27.00000\n",
+       "DISCIPLINA      33.28973 0.00012  9.00000\n",
+       "PERÍODO         33.28973 0.00012  9.00000\n",
+       "turno           42.96724 0.00016 15.00000\n",
+       "SEXO            19.83062 0.00018  3.00000\n",
+       "turno_do_dia    13.68258 0.00337  3.00000\n",
+       "dia_da_semana   16.33029 0.06030  9.00000\n",
+       "unidade          4.56085 0.20693  3.00000"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resultados = {}\n",
+    "for col in dados.columns:\n",
+    "    if col == 'PESQ2': continue\n",
+    "    cont_table = dados.groupby(by=hue)[col].count()\n",
+    "    chi_value, pvalue, dof, exp = chi2_contingency(pd.crosstab(dados[col], dados[hue]))\n",
+    "    resultados[col] = {'chi_value':chi_value, 'pvalue':pvalue, 'dof':dof}\n",
+    "pd.DataFrame(resultados).T.sort_values(by='pvalue')"
    ]
   }
  ],
